feat: Agent 端口接入 + 编排产出展示 + 多模态补齐 + 架构清理
Agent 端口接入:
- AgentLeafExecutor 接入 Agent.builder() + DefaultAgent + ReActExecutionStrategy
- 新增 AgentToolProvider 连接 ToolRegistry 与 Agent 端口
- Agent 执行中自动注入 `--- Agent名 ---` 内容分隔头

编排产出展示:
- 消息气泡中 Agent 产出添加 `--- Agent名 ---` 阶段分隔
- PipelineDialog 轮询增加 60 次上限，防止无限请求
- 砍掉冗余的 sections/PhaseCard/时间线条方案

多模态补齐:
- 新增 ImageAnalysisLeafExecutor (image_analysis 类型)
- 新增 SpeechRecogLeafExecutor (speech_recog 类型) + EchoSttAdapter
- 新增 VideoGenLeafExecutor (video_gen 类型) + EchoVideoGenAdapter
- ImageGenLeafExecutor 结构化错误恢复(超时重试/quota提示/文本降级)
- ProviderFactory 注册所有多模态适配器

测试:
- 创建 MockContinuation 共享测试工具
- 编写 SequentialModeStrategyTest(顺序执行/跳过已完成/空子节点)
- 创建 FilePolicyTest(路径穿越拒绝/正常路径放行)

架构清理:
- 对话消息全文搜索 API + V21 DB 迁移
- MessageEntity 补齐 sections/audios/msgType/importance/progress
- CTE 递归查询增加 1000 层深度保护
- HikariCP 连接池对齐(50连接/10空闲/5s超时/10min生命周期)
- Prometheus Micrometer 集成(11个业务指标)
- GoalCard + ModeSelector 前端组件
- 领域划分文档